# master_of_puppets

./: .gitignore  Containerfile.server  DECISIONS.md  NOTICE  PROGRESS_HANDOVER.md  README.md  TOOLING.md  compose.server.yaml  debug_docker.py  debug_exit.py  debug_loader.py  debug_node_run.py  debug_remote.py  deploy_compose_fix.py  deploy_dashboard.py  deploy_server_update.py  deploy_sync_docker.py  diag_concise.py  diag_dashboard.py  diag_debug.py  diag_final.py  diag_remote.py  diag_reset.py  diag_ssl.py  diagnostic.py  diagnostic_server.py  diagnostic_v2.py  e2e_api_test.py  fix_remote_socket.py  generate_test_signature.py  handoff.md  init_db.py  jobs.db  monitor_remote.py  node-compose.yaml  pyproject.toml  regenerate_certs.py  requirements.txt  reset_pki.py  run_signed_job.py  (+8 more)
.agent/: feature_smb_mounts.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v10.0-MILESTONE-AUDIT.md
agent_service/: db.py  main.py  pki.py
agentic instructions/: recommended_changes.md
dashboard/: Containerfile  package-lock.json  package.json
docs/: INSTALL.md  UserGuide.md  compatibility.md  mkdocs.yml  security.md  ssl_guide.md  third_party_audit_report.md
environment_service/: node.py
installer/: install_node.ps1  install_universal.sh
model_service/: main.py
puppeteer/: Containerfile.server  Containerfile.test  compose.server.yaml  migration.sql  migration_v09.sql  migration_v10.sql  migration_v12.sql  migration_v18.sql  migration_v25.sql  migration_v26.sql  migration_v33.sql  migration_v34.sql  (+3 more)
(+481 files in other folders)
